; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8192e/rtl8192e/extr_rtl_dm.c__rtl92e_dm_init_wa_broadcom_iot.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8192e/rtl8192e/extr_rtl_dm.c__rtl92e_dm_init_wa_broadcom_iot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.r8192_priv = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.rt_hi_throughput* }
%struct.rt_hi_throughput = type { i32, i32 }

@WAIotTHVal = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @_rtl92e_dm_init_wa_broadcom_iot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_rtl92e_dm_init_wa_broadcom_iot(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.r8192_priv*, align 8
  %4 = alloca %struct.rt_hi_throughput*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %5 = load %struct.net_device*, %struct.net_device** %2, align 8
  %6 = call %struct.r8192_priv* @rtllib_priv(%struct.net_device* %5)
  store %struct.r8192_priv* %6, %struct.r8192_priv** %3, align 8
  %7 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %8 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.rt_hi_throughput*, %struct.rt_hi_throughput** %10, align 8
  store %struct.rt_hi_throughput* %11, %struct.rt_hi_throughput** %4, align 8
  %12 = load %struct.rt_hi_throughput*, %struct.rt_hi_throughput** %4, align 8
  %13 = getelementptr inbounds %struct.rt_hi_throughput, %struct.rt_hi_throughput* %12, i32 0, i32 0
  store i32 0, i32* %13, align 4
  %14 = load i32, i32* @WAIotTHVal, align 4
  %15 = load %struct.rt_hi_throughput*, %struct.rt_hi_throughput** %4, align 8
  %16 = getelementptr inbounds %struct.rt_hi_throughput, %struct.rt_hi_throughput* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local %struct.r8192_priv* @rtllib_priv(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
